--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -3,14 +3,14 @@
 
 @if (ListaGrados?.Count > 0)
 {
-    <div class="d-flex flex-wrap" style="max-width: 40vw">
+    <div class="d-flex flex-wrap" style="max-width: 90vw">
         @foreach (var Carrera in ListaCarreras)
         {
-            <div class="m-2" style="width: 30vw;">
-                <Card style="width: 30vw;">
+            <div class="m-2" style="width: 20vw;">
+                <Card style="width: 20vw;">
                     <CardBody>
                         <CardTitle> @Carrera.nombrecarrera  </CardTitle>
-                        <Accordion class="m-2">
+                        <Accordion class="m-2" OnHidden="ReducirContador">
                             <AccordionItem>
                                 <TitleTemplate>
                                     Grados Activos
@@ -18,9 +18,26 @@
                                 <Content>
                                     @foreach (var Grado in ListaGrados)
                                     {
-                                        <Button Color="ButtonColor.Primary" class="m-1" Size="Size.Small" @onclick="() => MostrarTexto(Grado.grado, Carrera.idcarrera)">
-                                            @Grado.grado
-                                        </Button>
+                                        if (Carrera.idcarrera == 1 && Grado.grado == Grados.Primero)
+                                        {
+                                            <Button Color="ButtonColor.Primary" class="m-1" Size="Size.Medium" @onclick="() => MostrarTexto(Grado.grado, Carrera.idcarrera)">
+                                                @Grado.grado
+                                            </Button>
+                                        }
+                                        else if (Carrera.idcarrera == 1 && Grado.grado > Grados.Primero)
+                                        {
+
+                                        }
+                                        else if (Grado.grado == Grados.Primero)
+                                        {
+
+                                        }
+                                        else
+                                        {
+                                            <Button Color="ButtonColor.Primary" class="m-1" Size="Size.Medium" @onclick="() => MostrarTexto(Grado.grado, Carrera.idcarrera)">
+                                                @Grado.grado
+                                            </Button>
+                                        }
                                     }
                                 </Content>
                             </AccordionItem>
@@ -30,6 +47,29 @@
             </div>
         }
     </div>
+    @if (GruposActivos?.Count > 0 && Acordeon > 0)
+    {
+        <Card class="m-2">
+            <CardTitle>
+                Seleccione el grupo:  &nbsp;
+            </CardTitle>
+            <div class="d-flex">
+                @foreach (var item in GruposActivos)
+                {
+                    <Button Color="ButtonColor.Primary" class="m-1" Size="Size.Medium">
+                        @foreach (var carrera in ListaCarreras)
+                        {
+                            if (carrera.idcarrera == item.idcarrera)
+                            {
+                                @carrera.nombrecarrera
+                            }
+                        }
+                        &nbsp;   @item.grado @item.grupo
+                    </Button>
+                }
+            </div>
+        </Card>
+    }
 }
 else
 {
@@ -42,7 +82,7 @@ else
     private List<Alumnos?> ListaGrados { get; set; }
     private List<Carreras> ListaCarreras { get; set; }
     private List<Alumnos?> GruposActivos { get; set; }
-
+    private int Acordeon { get; set; } = 0;
 
     protected override async Task OnInitializedAsync()
     {
@@ -78,14 +118,21 @@ else
                     .GroupBy(x => x.grupo)
                     .Select(x => x.FirstOrDefault())
                     .ToListAsync();
-        //Muestra en un display Alert el grado, la carrea y el grupo, por ejemplo ° A de la carrera de Ing. en Sistemas
-        string mensaje = "";
-        foreach (var item in GruposActivos)
-        {
-            mensaje += "° " + item.grupo + " de la carrera de " + Contexto.Carreras.Where(x => x.idcarrera == item.idcarrera).FirstOrDefault().nombrecarrera + "\n";
-        }
-        await Application.Current.MainPage.DisplayAlert("Grupos Activos", mensaje, "Ok");
+        // Muestra en un display Alert el grado, la carrea y el grupo, por ejemplo ° A de la carrera de Ing. en Sistemas
+        // string mensaje = "";
+        // foreach (var item in GruposActivos)
+        // {
+        //     mensaje += "° " + item.grupo + " de la carrera de " + Contexto.Carreras.Where(x => x.idcarrera == item.idcarrera).FirstOrDefault().nombrecarrera + "\n";
+        // }
+        // await Application.Current.MainPage.DisplayAlert("Grupos Activos", mensaje, "Ok");
+        Acordeon = +1;
     }
+
+    private void ReducirContador()
+    {
+        Acordeon -= 1;
+    }
+
 
 
 }
