--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar bg-body-tertiary">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="../Components/assets/cecytej-logo.png" alt="logo-cecytej" width="30" height="24">
+            <img src="assets/cecytej-logo.png" alt="logo-cecytej" width="30" height="24">
         </a>
     </div>
 </nav>
@@ -20,5 +20,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Alumnos
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Pagos">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Pagos
+            </NavLink>
+        </div>
+
     </nav>
 </div>
