--- a/Components/Pages/PaginaAlumnos/IndexAlumnos.razor
+++ b/Components/Pages/PaginaAlumnos/IndexAlumnos.razor
@@ -16,6 +16,7 @@
                 <th scope="col">#</th>
                 <th scope="col">No. Control</th>
                 <th scope="col">Nombre del Alumno</th>
+                <th score="col">Estado</th>
                 <th scope="col">Grupo</th>
             </tr>
         </thead>
@@ -27,6 +28,7 @@
                     <th scope="row">@(ListaAlumnos.IndexOf(Alumno) + 1)</th>
                     <th scope="row">@Alumno.nocontrol</th>
                     <td>@Alumno.nombrealumno</td>
+                    <td>@Alumno.estado</td>
                     <td>@Alumno.grupo</td>
                 </tr>
             }
@@ -94,7 +96,7 @@ else
                 .Where(x => ((int)x.grado) == Grado && x.idcarrera == Carrera && x.grupo == Grupo && (x.nombrealumno.Contains(e.Value.ToString()) || x.nocontrol.Contains(e.Value.ToString())))
                 .OrderBy(x => x.nombrealumno)
                 .ToListAsync();
-         currentPageNumber = 1;
+            currentPageNumber = 1;
         }
 
     }
