--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,28 +1,31 @@
-﻿<nav class="navbar bg-body-tertiary">
+﻿<nav class="navbar bg-light" style="border-bottom: 2px solid #a3a3a3; border-right: 2px solid #c7c9c8 ">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="assets/cecytej-logo.png" alt="logo-cecytej" width="30" height="24">
+            <img src="assets/cecytej-logo.png" alt="logo-cecytej" class="img-fluid">
         </a>
     </div>
 </nav>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div class="nav-scrollable bg-secondary" onclick="document.querySelector('.navbar-toggler').click()">
+<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()" style="background-color: #ececec; border-right: 2px solid #c7c9c8 ">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Inicio
+            <NavLink class="nav-link text-black" href="" Match="NavLinkMatch.All">
+                <img src="assets/hogar.png" alt="logo-cecytej" width="22" height="22" class="me-2"> 
+                Inicio
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Alumnos
+            <NavLink class="nav-link text-black" href="counter">
+                <img src="assets/usuario.png" alt="logo-cecytej" width="22" height="22" class="me-2">
+               Alumnos
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Pagos">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Pagos
+            <NavLink class="nav-link text-black" href="Pagos">
+                <img src="assets/pagar.png" alt="logo-cecytej" width="22" height="22" class="me-2"> 
+                Pagos
             </NavLink>
         </div>
 
