--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<nav class="navbar bg-light" style="border-bottom: 2px solid #a3a3a3; border-right: 2px solid #c7c9c8 ">
+﻿<nav class="navbar bg-light" style="border-bottom: 2px solid #a3a3a3; border-right: 2px solid #c7c9c8; height:90px;">
     <div class="container">
         <a class="navbar-brand" href="#">
             <img src="assets/cecytej-logo.png" alt="logo-cecytej" class="img-fluid">
