grosor del borde derecho sidebar

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -6,7 +6,7 @@
     </div>
 
     <main>
-        <div class="top-row px-4" style="height:90px; border-bottom: 2px solid #a3a3a3;">
+        <div class="top-row px-4 bg-light" style="height:90px; border-bottom: 2px solid #a3a3a3;">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
