--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using BlazorBootstrap
 
 <div class="page">
     <div class="sidebar">
@@ -15,3 +16,6 @@
         </article>
     </main>
 </div>
+
+<Preload />
+<Toasts class="p-3" AutoHide="true" Delay="4000" Placement="ToastsPlacement.TopRight" />
