--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,4 +1,18 @@
 ﻿@page "/"
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="d-flex justify-content-center align-items-center" style="height: 50vh;">
+            <div class="text-center">
+                <h1>Bienvenido</h1>
+                <br />
+                <h2><strong>Sistema de Gestion de Pagos</strong></h2>
+                <br />
+                @* <h3>Da clic en cualquier opcion de la barra de navegacion para comenzar</h3> *@
+                <!--El ultimo titulo debe ser mas grisaseo y opacio-->
+                <h3><span class="text-muted">Da clic en cualquier opcion de la barra de navegacion para comenzar</span></h3>
 
-Hola
+            </div>
+        </div>
+    </div>
+</div>
