--- a/Components/Pages/PaginaAlumnos/IndexAlumnos.razor
+++ b/Components/Pages/PaginaAlumnos/IndexAlumnos.razor
@@ -18,6 +18,7 @@
                 <th scope="col">Nombre del Alumno</th>
                 <th score="col">Estado</th>
                 <th scope="col">Grupo</th>
+                <th scope="col">Acciones</th>
             </tr>
         </thead>
         <tbody>
@@ -30,6 +31,15 @@
                     <td>@Alumno.nombrealumno</td>
                     <td>@Alumno.estado</td>
                     <td>@Alumno.grupo</td>
+                    <td>
+                        <!--Boton informacion-->
+                        <a class="btn btn-primary" href="Alumnos/Info/@Alumno.idalumno">
+                            <i class="bi bi-info"></i>
+                        </a>
+                        <a class="btn btn-secondary" href="Alumnos/Editar/@Alumno.idalumno">
+                            <i class="bi bi-pencil-square"></i>
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
@@ -53,6 +63,7 @@ else
 
 
 @code {
+    [Inject] protected PreloadService PreloadService { get; set; }
     [Parameter] public int Grado { get; set; }
     [Parameter] public int Carrera { get; set; }
     [Parameter] public string Grupo { get; set; }
@@ -67,15 +78,30 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        //Busca el nombre de la carrera
-        SCarrera = Contexto.Carreras.Where(x => x.idcarrera == Carrera).Select(x => x.nombrecarrera).FirstOrDefault();
-        //Construye el titulo "1° A Formacion Basica"
-        Titulo = SCarrera + " " + Grado + "° " + Grupo;
-        //Trae la lista de alumnos que pertenecen al grupo seleccionado organizados alfabeticamente
-        ListaAlumnos = ListaAlumnos = await Contexto.Alumnos
-                .Where(x => ((int)x.grado) == Grado && x.idcarrera == Carrera && x.grupo == Grupo)
-                .OrderBy(x => x.nombrealumno)
-                .ToListAsync();
+        PreloadService.Show();
+        try
+        {
+            await Task.Run(async () =>
+            {
+                //Busca el nombre de la carrera
+                SCarrera = Contexto.Carreras.Where(x => x.idcarrera == Carrera).Select(x => x.nombrecarrera).FirstOrDefault();
+                //Construye el titulo "1° A Formacion Basica"
+                Titulo = SCarrera + " " + Grado + "° " + Grupo;
+                //Trae la lista de alumnos que pertenecen al grupo seleccionado organizados alfabeticamente
+                ListaAlumnos = ListaAlumnos = await Contexto.Alumnos
+                        .Where(x => ((int)x.grado) == Grado && x.idcarrera == Carrera && x.grupo == Grupo)
+                        .OrderBy(x => x.nombrealumno)
+                        .ToListAsync();
+            });
+        }
+        catch (Exception ex)
+        {
+            await Application.Current.MainPage.DisplayAlert("Error", "No se pudieron cargar los alumnos", "Ok");
+        }
+        finally
+        {
+            PreloadService.Hide();
+        }
     }
     private async Task BuscarAlumno(ChangeEventArgs e)
     {
