--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -7,11 +7,11 @@
     </div>
 
     <main>
-        <div class="top-row px-4 bg-light" style="height:90px; border-bottom: 2px solid #a3a3a3;">
+        <div class="top-row px-4 bg-light" style="height:93px; border-bottom: 2px solid #a3a3a3;">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
-        <article class="content px-4">
+        <article class="content ">
             @Body
         </article>
     </main>
