--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,14 +1,12 @@
-﻿<nav class="navbar bg-light" style="border-bottom: 2px solid #a3a3a3; border-right: 1px solid #c7c9c8; height:90px;">
-    <div class="container">
-        <a class="navbar-brand" href="#">
-            <img src="assets/cecytej-logo.png" alt="logo-cecytej" class="img-fluid">
-        </a>
+﻿﻿<div class="navbar bg-light" style="border-bottom: 2px solid #a3a3a3;">
+    <div class="container-fluid">
+        <img src="assets/cecytej-logo.png" alt="logo-cecytej" style="width:100%;">
     </div>
-</nav>
+</div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()" style="background-color: #ececec; border-right: 1px solid #c7c9c8 ">
+<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()" style="background-color: #ececec; max-height:auto">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link text-black" href="" Match="NavLinkMatch.All">
