Ya hasta ahi alv

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
     </div>
 
     <main>
-        <div class="top-row px-4 bg-light" style="height:93px; border-bottom: 2px solid #a3a3a3;">
+        <div class="top-row px-4">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
         </div>
 
