--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,12 +1,16 @@
-﻿﻿<div class="navbar bg-light" style="border-bottom: 2px solid #a3a3a3;">
+﻿<div class="navbar bg-light">
     <div class="container-fluid">
-        <img src="assets/cecytej-logo.png" alt="logo-cecytej" style="width:100%;">
+        <a class="navbar-brand" href="/">
+            <img src="assets/cecytej-logo.png" alt="logo-cecytej" style="max-width: 35%; height: auto;" />
+        </a>
     </div>
 </div>
 
+
+
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()" style="background-color: #ececec; max-height:auto">
+<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()" style="background-color: #ececec;">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link text-black" href="" Match="NavLinkMatch.All">
