--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -30,6 +30,17 @@
                 Pagos
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link text-black" href="Reportes">
+                <img src="assets/pagar.png" alt="logo-cecytej" width="22" height="22" class="me-2">
+                Reportes
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link text-black" href="CotejamientoPagos">
+                <img src="assets/pagar.png" alt="logo-cecytej" width="22" height="22" class="me-2">
+                Cotejamiento de Pagos
+            </NavLink>
+        </div>
     </nav>
 </div>
