--- a/Components/Pages/Pagos/IndexPagos.razor
+++ b/Components/Pages/Pagos/IndexPagos.razor
@@ -24,7 +24,7 @@
             <CardBody>
                 <CardTitle>Manual</CardTitle>
                 <CardText></CardText>
-                <Button Color="ButtonColor.Primary" To="/Pagos/RegistrarPago" Type="ButtonType.Link">Pago Manual</Button>
+                <Button Color="ButtonColor.Primary" To="/Pagos/RegistrarPago" Type="ButtonType.Link" Disabled="true">Pago Manual</Button>
             </CardBody>
         </Card>
     </div>
