--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -32,7 +32,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link text-black" href="Reportes">
-                <img src="assets/pagar.png" alt="logo-cecytej" width="22" height="22" class="me-2">
+                <img src="assets/iconReportes.png" alt="logo-cecytej" width="22" height="22" class="me-2">
                 Reportes
             </NavLink>
         </div>
